--- a/intro-slider.html
+++ b/intro-slider.html
@@ -1604,13 +1604,157 @@
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="main-preview">
-							<div class="mobile" id="frame-container">
-								<iframe src="https://www.w3docs.com" style="height:100%; width: 100%; padding: 0;">
-									<h2 style="color: black;">dasdasda</h2>
-								</iframe>
+						<div class="mobile-view">
+							<div class="mobile__close">Mobile view</div>
+							<div class="card">
+								<div class="card-body">
+									<div class="screen-inner">
+										<img src="./images/viewer.png" class="mobile-image" alt="pic">
+										<div class="iframe-inner">
+											<div class="header-mobile">
+												<ul class="header-mobile__list">
+													<li>
+														<img src="./images/Header & Taps/header/menu Header-1.png" alt="menu">
+													</li>
+													<li>
+														<img src="./images/Header & Taps/header/logo.png" class="logo" alt="logo">
+													</li>
+													<li>
+														<img src="./images/Header & Taps/header/search.png" alt="search">
+													</li>
+												</ul>
+											</div>
+											<div class="menu-mobile">
+												<div class="card">
+													<div class="card-body">
+														<div class="d-flex h-100">
+															<div class="nav flex-column nav-pills mb-3">
+																<a href="#v-pills-home" data-toggle="pill" class="nav-link show active">Home</a>
+																<a href="#v-pills-profile" data-toggle="pill" class="nav-link">Profile</a>
+															</div>
+															<div class="tab-content">
+																<div id="v-pills-home" class="tab-pane fade active show">
+																	<div class="card">
+																		<div class="card-body">
+																			<div id="accordion-four" class="accordion accordion-no-gutter  accordion-bordered">
+																				<div class="accordion__item">
+																					<div class="accordion__header collapsed" data-toggle="collapse"
+																						data-target="#bordered_no-gutter_collapseOne1" aria-expanded="false">
+																						<span class="accordion__header--text">Accordion</span>
+																						<span class="accordion__header--indicator style_two"></span>
+																					</div>
+																					<div id="bordered_no-gutter_collapseOne1" class="accordion__body collapse"
+																						data-parent="#accordion-four">
+																						<div class="accordion__body--text ">
+																							<div class="style-imge style-imge1">
+																								<img src="./images/img-style/1.png" alt="as">
+																							</div>
+																							<div class="style-imge style-imge2">
+																								<img src="./images/img-style/2.png" alt="sd">
+																								<img src="./images/img-style/2.png" alt="sd">
+																							</div>
+																							<div class="style-imge style-imge3">
+																								<img src="./images/img-style/3.png" alt="as">
+																								<img src="./images/img-style/3.png" alt="sd">
+																								<img src="./images/img-style/3.png" alt="df">
+																							</div>
+																						</div>
+																					</div>
+																				</div>
+																				<div class="accordion__item">
+																					<div class="accordion__header collapsed" data-toggle="collapse"
+																						data-target="#bordered_no-gutter_collapseTwo2" aria-expanded="false">
+																						<span class="accordion__header--text">Two</span>
+																						<span class="accordion__header--indicator style_two"></span>
+																					</div>
+																					<div id="bordered_no-gutter_collapseTwo2" class="accordion__body collapse"
+																						data-parent="#accordion-four">
+																						<div class="accordion__body--text ">
+																							<div class="style-imge style-imge2">
+																								<img src="./images/img-style/2.png" alt="sd">
+																								<img src="./images/img-style/2.png" alt="sd">
+																							</div>
+																						</div>
+																					</div>
+																				</div>
+																			</div>
+																		</div>
+																	</div>
+																</div>
+																<div id="v-pills-profile" class="tab-pane fade">
+																	<div class="card">
+																		<div class="card-body">
+																			<div id="accordion-four" class="accordion accordion-no-gutter  accordion-bordered">
+																				<div class="accordion__item">
+																					<div class="accordion__header collapsed" data-toggle="collapse"
+																						data-target="#bordered_no-gutter_collapseOne11" aria-expanded="false">
+																						<span class="accordion__header--text">Accordion</span>
+																						<span class="accordion__header--indicator style_two"></span>
+																					</div>
+																					<div id="bordered_no-gutter_collapseOne11" class="accordion__body collapse"
+																						data-parent="#accordion-four">
+																						<div class="accordion__body--text ">
+																							<div class="style-imge style-imge1">
+																								<img src="./images/img-style/1.png" alt="as">
+																							</div>
+																							<div class="style-imge style-imge2">
+																								<img src="./images/img-style/2.png" alt="sd">
+																								<img src="./images/img-style/2.png" alt="sd">
+																							</div>
+																							<div class="style-imge style-imge3">
+																								<img src="./images/img-style/3.png" alt="as">
+																								<img src="./images/img-style/3.png" alt="sd">
+																								<img src="./images/img-style/3.png" alt="df">
+																							</div>
+																						</div>
+																					</div>
+																				</div>
+																				<div class="accordion__item">
+																					<div class="accordion__header collapsed" data-toggle="collapse"
+																						data-target="#bordered_no-gutter_collapseTwo22" aria-expanded="false">
+																						<span class="accordion__header--text">Two</span>
+																						<span class="accordion__header--indicator style_two"></span>
+																					</div>
+																					<div id="bordered_no-gutter_collapseTwo22" class="accordion__body collapse"
+																						data-parent="#accordion-four">
+																						<div class="accordion__body--text ">
+																							<div class="style-imge style-imge1">
+																								<img src="./images/img-style/1.png" alt="as">
+																							</div>
+																						</div>
+																					</div>
+																				</div>
+																			</div>
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="footer-mobile">
+												<ul class="footer-mobile__list">
+													<li>
+														<img src="./images/Header & Taps/Home_Active.png" alt="">
+													</li>
+													<li>
+														<img src="./images/Header & Taps/Menu.png" alt="">
+													</li>
+													<li>
+														<img src="./images/Header & Taps/cart.png" alt="">
+													</li>
+													<li>
+														<img src="./images/Header & Taps/Account.png" alt="">
+													</li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
+				
 					</div>
 				</div>
 			</div>
