--- a/chart-chartist.html
+++ b/chart-chartist.html
@@ -1186,9 +1186,9 @@
                                     <div class="card-header">
                                         <h4 class="card-title">Overlapping bars on mobile</h4>
                                     </div>
-                                    <div class="card-body">
+                                    <!-- <div class="card-body">
                                         <div id="overlapping-bars" class="ct-chart ct-golden-section chartlist-chart"></div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-12">
