--- a/ios-analytics.html
+++ b/ios-analytics.html
@@ -26,7 +26,8 @@
 	<link rel="stylesheet" href="./vendor/chartist/css/chartist.min.css">
 	<link href="./vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
 	<link href="./css/style.css" rel="stylesheet">
-	<link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
+	<link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet"> 
+<script src="./vendor/apexchart/apexchart.js"></script>
 	<!-- owl carousel --> 
 	<link rel="stylesheet" href="./lib/css/owl.carousel.min.css"> 
 	<link rel="stylesheet" href="./lib/css/owl.theme.default.min.css">
@@ -980,89 +981,47 @@
 				<div class="row">
 					<div class="col-xl-12 col-xxl-12">
 						<div class="row">
-							<div class="col-xl-4 col-xxl-4 col-lg-6 col-sm-6">
-								<div class="card overflow-hidden">
-									<div class="card-body pb-0 px-4 pt-4">
-										<div class="row">
-											<div class="col">
-												<h5 class="mb-1">2000</h5>
-												<span class="text-success">Total Sale</span>
-											</div>
-										</div>
+							<div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
+								<div class="card card--flotLine1">
+									<div class="card-header">
+										<h4 class="card-title">Daily Installs(Line Chart)</h4>
+										<h4 class="card-title">Daily Uninstalls(Line Chart)</h4>
+										<span class="total-number">0</span>
 									</div>
-									<div class="chart-wrapper">
-										<canvas id="areaChart_2" class="chartjs-render-monitor" height="90"></canvas>
+									<div class="card-body">
+										<div id="flotLine1" class="flot-chart"></div>
 									</div>
 								</div>
 							</div> 
+              <div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
+								<div class="card card--flotLine1">
+									<div class="card-header">
+										<h4 class="card-title">Daily Installs(Line Chart)</h4>
+										<h4 class="card-title">Daily Uninstalls(Line Chart)</h4>
+										<span class="total-number">0</span>
+									</div>
+									<div class="card-body">
+										<div id="flotLine11" class="flot-chart"></div>
+									</div>
+								</div>
+							</div>  
               <div class="col-xl-4 col-xxl-4 col-lg-6 col-sm-6">
 								<div class="card overflow-hidden">
 									<div class="card-body px-4 py-4">
-										<h5 class="mb-3">1700 / <small class="text-primary">Sales Status</small></h5>
+										<h5 class="mb-3">0 / <small class="text-primary">Sales Status</small></h5>
 										<div class="chart-point">
 											<div class="check-point-area">
 												<canvas id="ShareProfit2"></canvas>
 											</div>
 											<ul class="chart-point-list">
-												<li><i class="fa fa-circle text-primary mr-1"></i> 40% Tickets</li>
-												<li><i class="fa fa-circle text-success mr-1"></i> 35% Events</li>
-												<li><i class="fa fa-circle text-warning mr-1"></i> 25% Other</li>
+												<li><i class="fa fa-circle text-primary mr-1"></i> 0% Tickets</li>
+												<li><i class="fa fa-circle text-success mr-1"></i> 0% Events</li>
+												<li><i class="fa fa-circle text-warning mr-1"></i> 0% Other</li>
 											</ul>
 										</div>
 									</div>
 								</div>
-							</div>  
-              <div class="col-xl-4 col-xxl-4 col-lg-6 col-sm-6">
-								<div class="card bg-success	overflow-hidden">
-									<div class="card-body pb-0 px-4 pt-4">
-										<div class="row">
-											<div class="col">
-												<h5 class="text-white mb-1">$14000</h5>
-												<span class="text-white">Total Eraning</span>
-											</div>
-										</div>
-									</div>
-									<div class="chart-wrapper" style="width:100%">
-										<span class="peity-line" data-width="100%">6,2,8,4,3,8,4,3,6,5,9,2</span>
-									</div>
-								</div>
-							</div>
-              <div class="col-xl-12 col-xxl-12 col-lg-12 col-md-12">
-                <div id="user-activity" class="card">
-                  <div class="card-header border-0 pb-0 d-sm-flex d-block">
-                    <div>
-                      <h4 class="card-title">History 2013 - 2021</h4>
-                      <p class="mb-1">Lorem Ipsum is simply dummy text of the printing</p>
-                    </div>
-                    <div class="card-action">
-                      <ul class="nav nav-tabs" role="tablist">
-                        <li class="nav-item">
-                          <a class="nav-link active" data-toggle="tab" href="#user" role="tab">
-                            Monthly
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" data-toggle="tab" href="#bounce" role="tab">
-                            Weekly
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" data-toggle="tab" href="#session-duration" role="tab">
-                            Today
-                          </a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="card-body">
-                    <div class="tab-content" id="myTabContent">
-                      <div class="tab-pane fade show active" id="user" role="tabpanel"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                        <canvas id="activity" class="chartjs chartjs-render-monitor" height="270" style="display: block; width: 635px; height: 270px;" width="635"></canvas>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div> 
+							</div> 
 						</div>
 					</div>   
 				</div>
@@ -1104,12 +1063,34 @@
 
 	<!-- Chartist -->
 	<script src="./vendor/chartist/js/chartist.min.js"></script>
+	<script src="./js/plugins-init/chartjs-init.js"></script>  
 
 	<!-- Dashboard 1 -->
 	<script src="./js/dashboard/dashboard-1.js"></script>
 	<!-- Svganimation scripts -->
 	<script src="./vendor/svganimation/vivus.min.js"></script>
-	<script src="./vendor/svganimation/svg.animation.js"></script>
+	<script src="./vendor/svganimation/svg.animation.js"></script> 
+
+	 
+	<script src="./vendor/apexchart/apexchart.js"></script>
+
+	<!-- Vectormap -->
+	<!-- Chart piety plugin files -->
+	<script src="./vendor/peity/jquery.peity.min.js"></script>
+
+	 <!-- Chart Chartist plugin files -->
+ 	 <script src="./vendor/chartist-plugin-tooltips/js/chartist-plugin-tooltip.min.js"></script>
+	 <script src="./js/plugins-init/chartist-init.js"></script>
+	<!-- Chartist -->
+	<script src="./vendor/chartist/js/chartist.min.js"></script>
+
+	<script src="./vendor/flot/jquery.flot.js"></script>
+	<script src="./vendor/flot/jquery.flot.pie.js"></script> 
+	<script src="./vendor/flot-spline/jquery.flot.spline.min.js"></script>
+	<script src="./js/plugins-init/flot-init.js"></script>
+
+ 
+    
 
 	<!-- owl carousel --> 
 
