--- a/notification-analytics.html
+++ b/notification-analytics.html
@@ -1008,7 +1008,43 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <div class="tab-content" id="myTabContent">
+                    <div class="tab-content tab-content--chart" id="myTabContent"> 
+											<div class="tab-content-data">
+												<ul class="tab-data-list">
+													<li class="data-item">
+														<div class="details">
+															<span class="details-name">Sent</span>
+															<div class="details-info">
+																<span class="number number-color1">31 K</span>
+															</div>
+														</div>
+													</li>
+													<li class="data-item">
+														<div class="details">
+															<span class="details-name">Received</span>
+															<div class="details-info">
+																<span class="number number-color2">0 K</span>
+															</div>
+														</div>
+													</li>
+													<li class="data-item">
+														<div class="details">
+															<span class="details-name">Impressions </span>
+															<div class="details-info">
+																<span class="number number-color3">0 K</span>
+															</div>
+														</div>
+													</li>
+													<li class="data-item">
+														<div class="details">
+															<span class="details-name">Open</span>
+															<div class="details-info">
+																<span class="number number-color4">0 K</span>
+															</div>
+														</div>
+													</li>
+												</ul>
+											</div>
                       <div class="tab-pane fade show active" id="user" role="tabpanel"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
                         <canvas id="activity" class="chartjs chartjs-render-monitor" height="270" style="display: block; width: 635px; height: 270px;" width="635"></canvas>
                       </div>
