--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 							<li class="nav-label">App Analytics </li>
 						</ul>
 						<!-- start custom card 1  -->
-						<a href="./android-analytics.html" class="card card--h card--active">
+						<!-- <a href="./android-analytics.html" class="card card--h card--active">
 							<div class="card-body">
 								<div class="bootstrap-media">
 									<div class="media">
@@ -310,20 +310,20 @@
 									</div>
 								</div>
 							</div>
-						</a>
+						</a> -->
 						<!-- start custom card 2  -->
 						<a href="./ios-analytics.html" class="card card--h">
 							<div class="card-body">
 								<div class="bootstrap-media">
 									<div class="media">
 										<div class="img-wrapper">
-											<img class="align-self-center rounded" width="60" src="./icons/Icon-Out/apple (1).png"
+											<img class="align-self-center rounded" width="60" src="./icons/Icon-Out/App Installation.png"
 												alt="DexignLab">
 										</div>
 										<div class="media-body">
 											<div class="card-h__title">
-												<h6 class="mt-0">IOS </h6>
-												<span>Analysics</span>
+												<h6 class="mt-0">App Instllation </h6>
+												<!-- <span>Analysics</span> -->
 											</div>
 											<p class="text-sm mb-0">Splendapp Analytics Collects Usage Data For Your App </p>
 										</div>
@@ -982,6 +982,20 @@
 		<div class="content-body">
 			<!-- row -->
 			<div class="container-fluid">
+				<div class="row page-titles mx-0">
+          <div class="col-sm-6">
+              <div class="welcome-text">
+                  <h4>App Instllation</h4>
+                  <p class="mb-0">File all fields</p>
+              </div>
+          </div>
+          <div class="col-sm-6 justify-content-sm-end mt-2 mt-sm-0 d-flex">
+              <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
+                  <li class="breadcrumb-item active"><a href="javascript:void(0)">android</a></li>
+              </ol>
+          </div>
+      </div>
 				<div class="row">
 					<div class="col-xl-12 col-xxl-12">
 						<div class="row">
@@ -990,7 +1004,7 @@
 									<div class="card-body pb-0 px-4 pt-4">
 										<div class="row">
 											<div class="col">
-												<h5 class="mb-1">2000</h5>
+												<h5 class="mb-1">0</h5>
 												<span class="text-success">Total Sale</span>
 											</div>
 										</div>
@@ -1005,7 +1019,7 @@
 									<div class="card-body pb-0 px-4 pt-4">
 										<div class="row">
 											<div class="col">
-												<h5 class="text-white mb-1">$14000</h5>
+												<h5 class="text-white mb-1">$0</h5>
 												<span class="text-white">Total Eraning</span>
 											</div>
 										</div>
@@ -1020,7 +1034,7 @@
 									<div class="card-body pb-0 px-4 pt-4">
 										<div class="row">
 											<div class="col text-white">
-												<h5 class="text-white mb-1">570</h5>
+												<h5 class="text-white mb-1">0</h5>
 												<span>VIEWS OF YOUR PROJECT</span>
 											</div>
 										</div>
@@ -1033,59 +1047,180 @@
 							<div class="col-xl-3 col-xxl-3 col-lg-6 col-sm-6">
 								<div class="card overflow-hidden">
 									<div class="card-body px-4 py-4">
-										<h5 class="mb-3">1700 / <small class="text-primary">Sales Status</small></h5>
+										<h5 class="mb-3">0 / <small class="text-primary">Sales Status</small></h5>
 										<div class="chart-point">
 											<div class="check-point-area">
 												<canvas id="ShareProfit2"></canvas>
 											</div>
 											<ul class="chart-point-list">
-												<li><i class="fa fa-circle text-primary mr-1"></i> 40% Tickets</li>
-												<li><i class="fa fa-circle text-success mr-1"></i> 35% Events</li>
-												<li><i class="fa fa-circle text-warning mr-1"></i> 25% Other</li>
+												<li><i class="fa fa-circle text-primary mr-1"></i> 0% Tickets</li>
+												<li><i class="fa fa-circle text-success mr-1"></i> 0% Events</li>
+												<li><i class="fa fa-circle text-warning mr-1"></i> 0% Other</li>
 											</ul>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-xl-12 col-xxl-12 col-lg-12 col-md-12">
-						<div id="user-activity" class="card">
-							<div class="card-header border-0 pb-0 d-sm-flex d-block">
-								<div>
-									<h4 class="card-title">History 2013 - 2021</h4>
-									<p class="mb-1">Lorem Ipsum is simply dummy text of the printing</p>
+					</div> 
+				</div>
+				<!-- Android -->
+				<div class="row page-titles mx-0">
+          <div class="col-sm-6">
+              <div class="welcome-text">
+                  <h4>Android Analysics</h4> 
+              </div>
+          </div> 
+      </div>
+			<div class="row">
+				<div class="col-xl-12 col-xxl-12">
+					<div class="row">
+						<div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
+							<div class="card card--flotLine1">
+								<div class="card-header">
+									<h4 class="card-title">Daily Installs(Line Chart)</h4>
+									<h4 class="card-title">Daily Uninstalls(Line Chart)</h4>
+									<span class="total-number">0</span>
 								</div>
-								<div class="card-action">
-									<ul class="nav nav-tabs" role="tablist">
-										<li class="nav-item">
-											<a class="nav-link active" data-toggle="tab" href="#user" role="tab">
-												Monthly
-											</a>
-										</li>
-										<li class="nav-item">
-											<a class="nav-link" data-toggle="tab" href="#bounce" role="tab">
-												Weekly
-											</a>
-										</li>
-										<li class="nav-item">
-											<a class="nav-link" data-toggle="tab" href="#session-duration" role="tab">
-												Today
-											</a>
-										</li>
-									</ul>
+								<div class="card-body">
+									<div id="flotLine1" class="flot-chart"></div>
 								</div>
 							</div>
-							<div class="card-body">
-								<div class="tab-content" id="myTabContent">
-									<div class="tab-pane fade show active" id="user" role="tabpanel">
-										<canvas id="activity" class="chartjs"></canvas>
-									</div>
+						</div> 
+						<div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
+							<div class="card card--flotLine1">
+								<div class="card-header">
+									<h4 class="card-title">Daily Installs(Line Chart)</h4>
+									<h4 class="card-title">Daily Uninstalls(Line Chart)</h4>
+									<span class="total-number">0</span>
+								</div>
+								<div class="card-body">
+									<div id="flotLine1111" class="flot-chart"></div>
+								</div>
+							</div>
+						</div> 
+						<div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
+							<div class="card">
+								<div class="card-header">
+									<h4 class="card-title">Installs & Uninstalls per country</h4>
+								</div>
+								<div class="card-body">
+									<div id="overlapping-bars" class="ct-chart ct-golden-section chartlist-chart"></div>
+								</div>
+						</div>
+						</div>   
+						<div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
+							<div class="card">
+								<div class="card-header">
+										<h4 class="card-title">Daily Installs Per Languages </h4>
+								</div>
+								<div class="card-body">
+										<div id="overlapping-bars2" class="ct-chart ct-golden-section chartlist-chart"></div>
 								</div>
 							</div>
 						</div>
+						<div class="col-xl-12 col-xxl-12">
+							<div class="card">
+								<div class="card-header">
+										<h4 class="card-title">Installs per App Version </h4>
+								</div>
+								<div class="card-body">
+									<div class="col-xl-12 col-xxl-12 col-lg-12 col-md-12">
+										<div id="user-activity" class="card">
+											<div class="card-header border-0 pb-0 d-sm-flex d-block">
+												<div>
+													<h4 class="card-title">Installs per App Version</h4>
+												</div>
+												<!-- <div class="card-action">
+													<ul class="nav nav-tabs" role="tablist">
+														<li class="nav-item">
+															<a class="nav-link active" data-toggle="tab" href="#user" role="tab">
+																Monthly
+															</a>
+														</li>
+														<li class="nav-item">
+															<a class="nav-link" data-toggle="tab" href="#bounce" role="tab">
+																Weekly
+															</a>
+														</li>
+														<li class="nav-item">
+															<a class="nav-link" data-toggle="tab" href="#session-duration" role="tab">
+																Today
+															</a>
+														</li>
+													</ul>
+												</div> -->
+											</div>
+											<div class="card-body">
+												<div class="tab-content" id="myTabContent">
+													<div class="tab-pane fade show active" id="user" role="tabpanel">
+														<canvas id="activity" class="chartjs"></canvas>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+						</div>
+						</div>
 					</div>
-				</div>
+				</div>   
+			</div>
+			<!-- Ios -->
+			<div class="row page-titles mx-0">
+				<div class="col-sm-6">
+						<div class="welcome-text">
+								<h4>Ios Analysics</h4> 
+						</div>
+				</div> 
+			</div>
+			<div class="row">
+				<div class="col-xl-12 col-xxl-12">
+					<div class="row">
+						<div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
+							<div class="card card--flotLine1">
+								<div class="card-header">
+									<h4 class="card-title">Daily Installs(Line Chart)</h4>
+									<h4 class="card-title">Daily Uninstalls(Line Chart)</h4>
+									<span class="total-number">0</span>
+								</div>
+								<div class="card-body">
+									<div id="flotLine111" class="flot-chart"></div>
+								</div>
+							</div>
+						</div> 
+						<div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
+							<div class="card card--flotLine1">
+								<div class="card-header">
+									<h4 class="card-title">Daily Installs(Line Chart)</h4>
+									<h4 class="card-title">Daily Uninstalls(Line Chart)</h4>
+									<span class="total-number">0</span>
+								</div>
+								<div class="card-body">
+									<div id="flotLine11" class="flot-chart"></div>
+								</div>
+							</div>
+						</div>  
+						<div class="col-xl-4 col-xxl-4 col-lg-6 col-sm-6">
+							<div class="card overflow-hidden">
+								<div class="card-body px-4 py-4">
+									<h5 class="mb-3">0 / <small class="text-primary">Sales Status</small></h5>
+									<div class="chart-point">
+										<div class="check-point-area">
+											<canvas id="ShareProfit22"></canvas>
+										</div>
+										<ul class="chart-point-list">
+											<li><i class="fa fa-circle text-primary mr-1"></i> 0% Tickets</li>
+											<li><i class="fa fa-circle text-success mr-1"></i> 0% Events</li>
+											<li><i class="fa fa-circle text-warning mr-1"></i> 0% Other</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div> 
+					</div>
+				</div>   
+			</div>
 			</div>
 		</div>
 		<!--**********************************
@@ -1131,6 +1266,27 @@
 	<script src="./vendor/svganimation/vivus.min.js"></script>
 	<script src="./vendor/svganimation/svg.animation.js"></script>
 
+		<!-- Vectormap -->
+	<!-- Chart piety plugin files -->
+	<script src="./vendor/peity/jquery.peity.min.js"></script>
+
+ 
+ 
+	<!-- Chartist -->
+	<script src="./vendor/chartist/js/chartist.min.js"></script>
+
+	<script src="./vendor/flot/jquery.flot.js"></script> 
+	<script src="./js/plugins-init/flot-init.js"></script>
+	
+
+<!-- Vectormap -->
+	<!-- Chart piety plugin files -->
+	<script src="./vendor/peity/jquery.peity.min.js"></script>
+
+	 <!-- Chart Chartist plugin files -->
+ 	 <script src="./vendor/chartist-plugin-tooltips/js/chartist-plugin-tooltip.min.js"></script>
+	 <script src="./js/plugins-init/chartist-init.js"></script>
+	
 	<!-- owl carousel -->
 
 	<script src="./lib/js/owl.carousel.min.js"></script>
