--- a/android-analytics.html
+++ b/android-analytics.html
@@ -993,7 +993,7 @@
               </ol>
           </div>
       </div>
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-xl-12 col-xxl-12">
 						<div class="row">
 							<div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
@@ -1052,7 +1052,7 @@
 							</div>
 						</div>
 					</div>   
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<!--**********************************
