--- a/ios-analytics.html
+++ b/ios-analytics.html
@@ -978,7 +978,7 @@
               </ol>
           </div>
       </div>
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-xl-12 col-xxl-12">
 						<div class="row">
 							<div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
@@ -1024,7 +1024,7 @@
 							</div> 
 						</div>
 					</div>   
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<!--**********************************
